# orca-robotics

./: CMakeLists.txt  COPYING  CTestConfig.cmake  DartConfig.cmake  INSTALL  LICENSE  ORCA_LICENSE
src/: CMakeLists.txt
src/components/: CMakeLists.txt  Doxyfile  components.dox
src/components/bicycle/: CMakeLists.txt  bicycle.def  component.cpp  component.h  doc.dox  hwthread.cpp  hwthread.h  netthread.cpp  netthread.h
src/components/cameracollectionserver/: CMakeLists.txt  cameracollectionserver.def  doc.dox  mainthread.cpp  mainthread.h
src/components/cameracollectionviewocv/: CMakeLists.txt  cameracollectionviewocv.def  colourconversions.cpp  colourconversions.h  conversions.cpp  doc.dox  mainthread.cpp  mainthread.h  viewer.cpp  viewer.h
src/components/cameraserver/: CMakeLists.txt  cameraserver.def  cameraserver.dox  doc.dox  mainthread.cpp  mainthread.h
src/components/cameraviewer/: CMakeLists.txt  cameraviewer.def  imageviewer.dox  mainthread.cpp  mainthread.h
src/components/disparity/: CMakeLists.txt  component.cpp  component.h  disparity.def  doc.dox  mainthread.cpp  mainthread.h
src/components/faithlocaliser/: CMakeLists.txt  component.cpp  component.h  doc.dox  faithlocaliser.cfg  faithlocaliser.def  faithlocaliser.dox  localise2dI.cpp  localise2dI.h  localise2d_i.cpp  localise2d_i.h  main.cpp  mainloop.cpp  mainloop.h  mainthread.cpp  mainthread.h  odometry2dconsumerI.cpp  odometry2dconsumerI.h  position2dconsumerI.cpp  position2dconsumerI.h  service.cpp  service.h
src/components/faithlocaliser3d/: CMakeLists.txt  doc.dox  faithlocaliser3d.def  mainthread.cpp  mainthread.h
src/components/featuremaploader/: CMakeLists.txt  component.cpp  component.h  doc.dox  fakemaploader.cpp  fakemaploader.h  featuremap2dI.cpp  featuremap2dI.h  featuremaploader.def  featuremaploader.dox  initthread.cpp  initthread.h  main.cpp  mainthread.cpp  mainthread.h  service.cpp  service.h  serviceI.cpp  serviceI.h
src/components/goalplanner/: CMakeLists.txt  algohandler.cpp  algohandler.h  component.cpp  component.h  doc.dox  goalplanner.def  goalplanner.dox  localise2dconsumerI.cpp  localise2dconsumerI.h  main.cpp  mainloop.cpp  mainloop.h  mainthread.cpp  mainthread.h  pathfollower2dI.cpp  pathfollower2dI.h  pathplanner2dconsumerI.cpp  pathplanner2dconsumerI.h  progressmonitor.cpp  progressmonitor.h  service.cpp  service.h
src/components/gps/: CMakeLists.txt  component.cpp  component.h  doc.dox  driver.h  fakegpsdriver.cpp  fakegpsdriver.h  genericImpl.h  genericiface.h  gps.def  gps.dox  gpsI.cpp  gpsI.h  gpscomponent.cpp  gpscomponent.h  gpsdriver.h  gpshandler.cpp  gpshandler.h  gpsiface.cpp  gpsiface.h  gpsinterfaces.h  gpsservice.cpp  gpsservice.h  main.cpp  mainloop.cpp  mainloop.h  mainsubsystem.cpp  mainsubsystem.h  mainthread.cpp  mainthread.h  nmea.cpp  nmea.h  service.cpp  service.h
src/components/gps2localise2d/: CMakeLists.txt  component.cpp  component.h  doc.dox  driver.h  gps2localise2d.def  gps2localise2d.dox  gpsheuristics.cpp  gpsheuristics.h  main.cpp  mainloop.cpp  mainloop.h  mainthread.cpp  mainthread.h  odometrybaseddriver.cpp  odometrybaseddriver.h  service.cpp  service.h  simpledriver.cpp  simpledriver.h
src/components/imageserver/: CMakeLists.txt  cameraI.cpp  cameraI.h  camerautil.cpp  camerautil.h  component.cpp  component.h  configimageserver.h.cmake  conversions.cpp  conversions.h  digiclops.dox  doc.dox  driver.cpp  driver.h  examples.dox  fakedriver.cpp  fakedriver.h  firewire.dox  imageserver.def  imageserver.dox  laser2d.def  laser2d.dox  main.cpp  mainloop.cpp  mainloop.h  mainthread.cpp  mainthread.h  monodriver.cpp  monodriver.h  monoopencv.dox  service.cpp  service.h  serviceI.cpp  serviceI.h
src/components/imageviewer/: CMakeLists.txt  cameraconsumerI.cpp  cameraconsumerI.h  cameraconsumer_i.cpp  component.cpp  component.h  configimageviewer.h.cmake  conversions.cpp  conversions.h  doc.dox  imagehandler.cpp  imagehandler.h  imageutil.cpp  imageutil.h  imageviewer.def  imageviewer.dox  main.cpp  mainloop.cpp  mainloop.h  mainthread.cpp  mainthread.h  service.cpp  service.h
src/components/imageviewocv/: CMakeLists.txt  Makefile  colourconversions.cpp  colourconversions.h  conversions.cpp  conversions.h  doc.dox  imageviewocv.def  mainthread.cpp  mainthread.h  viewer.cpp  viewer.h
src/components/imageviewqt/: CMakeLists.txt  component.cpp  component.h  imagequeue.h  mainthread.cpp  mainthread.h  viewwidget.cpp  viewwidget.h
src/components/imu/: CMakeLists.txt  component.cpp  component.h  fakeimudriver.cpp  fakeimudriver.h  imu.cfg  imu.def  imu.dox  imuI.cpp  imuI.h  imucomponent.cpp  imucomponent.h  imudriver.h  imuhandler.cpp  imuhandler.h  imuservice.cpp  imuservice.h  main.cpp  mainthread.cpp  mainthread.h  position3dI.cpp  position3dI.h  service.cpp  service.h
src/components/insgps/: CMakeLists.txt  component.cpp  component.h  doc.dox  driver.cpp  driver.h  fakeinsgpsdriver.cpp  fakeinsgpsdriver.h  gpsI.cpp  gpsI.h  handler.cpp  handler.h  hwthread.cpp  hwthread.h  imuI.cpp  imuI.h  insgps.def  insgps.dox  insgpsi.h  insgpsservice.cpp  insgpsservice.h  localise3dI.cpp  localise3dI.h  main.cpp  mainthread.cpp  mainthread.h  odometry3dI.cpp  odometry3dI.h  position3dI.cpp  position3dI.h  service.cpp  service.h
src/components/laser2d/: CMakeLists.txt  component.cpp  component.h  doc.dox  driver.cpp  driver.h  fakedriver.cpp  (+16 more)
src/examples/: CMakeLists.txt
src/hydrodrivers/: CMakeLists.txt
src/hydrointerfaces/: CMakeLists.txt  bicycle.cpp  bicycle.h  disparity.cpp  disparity.h  gps.h  humaninput2d.cpp  humaninput2d.h  image.h  imageconverter.h  insgps.cpp  insgps.h  laserfeatureextractor.h  laserscanner2d.cpp  laserscanner2d.h  mhipa10.cpp  mhipa10.h  multiimage.h  pathplanner2d.h  rangerarray.h  rangescannav2d.h  robot2d.cpp  robot2d.h  segwayrmp.cpp  segwayrmp.h
src/hydrolibs/: CMakeLists.txt  svn-commit.tmp
src/hydroutils/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  Doxyfile  interfaces.dox
src/libs/: CMakeLists.txt
src/sandbox/: CMakeLists.txt
src/utils/: CMakeLists.txt  Doxyfile  utils.dox
(+4141 files in other folders)
