# A place for well-tested and well-documented components.

message( STATUS "== COMPONENTS ==" )

# when adding new directories, please maintain alphabetical order
add_subdirectory( cameraserver )
add_subdirectory( disparity )
add_subdirectory( faithlocaliser )
add_subdirectory( featuremaploader )
add_subdirectory( goalplanner )
add_subdirectory( gps )
add_subdirectory( gps2localise2d )
add_subdirectory( imageserver )
add_subdirectory( imageviewocv )
add_subdirectory( insgps )
add_subdirectory( laser2d )
add_subdirectory( laser2og )
add_subdirectory( laserfeatureextractor )
add_subdirectory( lasermon )
add_subdirectory( localnav )
add_subdirectory( multicameraserver )
add_subdirectory( multicameraviewocv )
add_subdirectory( rangerarray )
add_subdirectory( ogmaploader )
add_subdirectory( ognode )
add_subdirectory( orcamon )
add_subdirectory( pathplanner )
add_subdirectory( pingserver )
add_subdirectory( pixmaploader )
add_subdirectory( propertyserver )
add_subdirectory( robot2d )
add_subdirectory( segwayrmp )
add_subdirectory( simlocaliser )
add_subdirectory( systemstatus )
add_subdirectory( systemstatusmon )
add_subdirectory( teleop )
add_subdirectory( tracermon )
add_subdirectory( wifi )

# putting it after all subdir's because of cmake weirdness:
# when placed above, only one subdir license appears 
GBX_ADD_LICENSE( LGPL )
