# A place for well-tested and well-documented libraries.

MESSAGE ( STATUS "== LIBRARIES ==" )

# when adding new directories, please maintain alphabetical order 
# unless there are inter-dependencies.

ADD_SUBDIRECTORY ( orcabros1 )
ADD_SUBDIRECTORY ( orcaice )
ADD_SUBDIRECTORY ( orcacm )
ADD_SUBDIRECTORY ( orcadef )
ADD_SUBDIRECTORY ( orcageom2d )
ADD_SUBDIRECTORY ( orcagpsutil )
ADD_SUBDIRECTORY ( orcaicegrid )
ADD_SUBDIRECTORY ( orcaicexml )
ADD_SUBDIRECTORY ( orcaifaceimpl )
ADD_SUBDIRECTORY ( orcaimage )
ADD_SUBDIRECTORY ( orcaimagegrabber )
ADD_SUBDIRECTORY ( orcalocalnav )
ADD_SUBDIRECTORY ( orcalog )
ADD_SUBDIRECTORY ( orcalogfactory )
ADD_SUBDIRECTORY ( orcamapload )
ADD_SUBDIRECTORY ( orcamisc )
ADD_SUBDIRECTORY ( orcaobj )
ADD_SUBDIRECTORY ( orcaogfusion )
ADD_SUBDIRECTORY ( orcaogmap )
ADD_SUBDIRECTORY ( orcapathplan )
ADD_SUBDIRECTORY ( orcaplayer )
ADD_SUBDIRECTORY ( orcaprobe )
ADD_SUBDIRECTORY ( orcaprobefactory )
ADD_SUBDIRECTORY ( orcaqcm )
ADD_SUBDIRECTORY ( orcaqgui )
ADD_SUBDIRECTORY ( orcaqgui2d )
ADD_SUBDIRECTORY ( orcaqgui2dfactory )
ADD_SUBDIRECTORY ( orcaqgui3d )
ADD_SUBDIRECTORY ( orcaqgui3dfactory )
ADD_SUBDIRECTORY ( orcaqt )
ADD_SUBDIRECTORY ( orcaquml )
ADD_SUBDIRECTORY ( orcarobotdriverutil )
ADD_SUBDIRECTORY ( orcawall )
ADD_SUBDIRECTORY ( orcawallfactory )
ADD_SUBDIRECTORY ( orcawifi )
