# A place for well-tested and well-documented libraries.

MESSAGE( STATUS "== LIBRARIES ==" )

# when adding new directories, please maintain order of inter-dependencies
# an alphabetical order for the independent libs.

ADD_SUBDIRECTORY( orcaobj )
ADD_SUBDIRECTORY( orcaice )
ADD_SUBDIRECTORY( orcaifaceimpl )

ADD_SUBDIRECTORY( orcabros1 )
ADD_SUBDIRECTORY( orcacm )
ADD_SUBDIRECTORY( orcadef )
ADD_SUBDIRECTORY( orcaicegrid )
ADD_SUBDIRECTORY( orcaicexml )
ADD_SUBDIRECTORY( orcaimage )
ADD_SUBDIRECTORY( orcaimagegrabber )
ADD_SUBDIRECTORY( orcalocalnav )
ADD_SUBDIRECTORY( orcalog )
ADD_SUBDIRECTORY( orcalogfactory )
ADD_SUBDIRECTORY( orcanavutil )
ADD_SUBDIRECTORY( orcaobjutil )
ADD_SUBDIRECTORY( orcaogmap )
ADD_SUBDIRECTORY( orcaogfusion )
ADD_SUBDIRECTORY( orcapathplan )
ADD_SUBDIRECTORY( orcaplayer )
ADD_SUBDIRECTORY( orcaprobe )
ADD_SUBDIRECTORY( orcaprobefactory )
ADD_SUBDIRECTORY( orcaqcm )
ADD_SUBDIRECTORY( orcaqt )
ADD_SUBDIRECTORY( orcaqgui )
ADD_SUBDIRECTORY( orcaqguielementutil )
ADD_SUBDIRECTORY( orcaqguielementmodelview )
ADD_SUBDIRECTORY( orcaqgui2dfactory )
ADD_SUBDIRECTORY( orcaqgui3d )
ADD_SUBDIRECTORY( orcaqgui3dfactory )
ADD_SUBDIRECTORY( orcaquml )
ADD_SUBDIRECTORY( orcarobotdriverutil )
ADD_SUBDIRECTORY( orcasim2d )
ADD_SUBDIRECTORY( orcavfh )
