# A place for well-tested and well-documented libraries.

message( STATUS "== LIBRARIES ==" )

# when adding new directories, please maintain order of inter-dependencies
# and alphabetical order for the independent libs.

add_subdirectory( orcaobj )
add_subdirectory( orcaobjutil )
add_subdirectory( orcaice )
add_subdirectory( orcaifaceimpl )
add_subdirectory( orcateleop )

add_subdirectory( orcabros1 )
add_subdirectory( orcacm )
add_subdirectory( orcadef )
add_subdirectory( orcafeatureobs )
add_subdirectory( orcaicegrid )
add_subdirectory( orcaicexml )
add_subdirectory( orcaimage )
add_subdirectory( orcalocalnav )
add_subdirectory( orcalog )
add_subdirectory( orcalogfactory )
add_subdirectory( orcanavutil )
add_subdirectory( orcaogmap )
add_subdirectory( orcaogfusion )
add_subdirectory( orcapathplan )
add_subdirectory( orcaplayer )
add_subdirectory( orcapotrace )
add_subdirectory( orcaprobe )
add_subdirectory( orcaprobefactory )
add_subdirectory( orcaqcompmodel )
add_subdirectory( orcaqt )
add_subdirectory( orcaqguielementmodelview )
add_subdirectory( orcaqgui )
add_subdirectory( orcaqguielementutil )
add_subdirectory( orcaqgui2dfactory )
add_subdirectory( orcaqgui3d )
add_subdirectory( orcaqgui3dfactory )
add_subdirectory( orcaquml )
add_subdirectory( orcarobotdriverutil )
add_subdirectory( orcascanutil )
add_subdirectory( orcasim2d )
add_subdirectory( orcasystemstatusutil )
add_subdirectory( orcavfh )
