# A place for well-tested and well-documented utility applications.

MESSAGE ( STATUS "== UTILITIES ==" )

# when adding new directories, please maintain alphabetical order 
# unless there are inter-dependencies.

ADD_SUBDIRECTORY ( cleanregistry )
ADD_SUBDIRECTORY ( deftools )
ADD_SUBDIRECTORY ( iceping )
ADD_SUBDIRECTORY ( icegridmon )
ADD_SUBDIRECTORY ( logger )
#ADD_SUBDIRECTORY ( logger2 )
ADD_SUBDIRECTORY ( logplayer )
ADD_SUBDIRECTORY ( orcasmc )
ADD_SUBDIRECTORY ( orcaview2d )
ADD_SUBDIRECTORY ( orcaview3d )
ADD_SUBDIRECTORY ( mgaconversion )
ADD_SUBDIRECTORY ( probe )
ADD_SUBDIRECTORY ( registrylist )
ADD_SUBDIRECTORY ( registryview )
ADD_SUBDIRECTORY ( systemtracermon )
